# Laabs

lab2/: lab2.tex
lab2/.build/: pz.blg
lab2/programm/: cal.py
lab2/src/: text.tex
lab3/: lab3.tex
lab3/.build/: lab2.aux  lab3.aux
lab3/programm/WpfApp1/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs
lab3/src/: text.tex
lab4/: lab4.tex
lab4/src/: text.tex
lab5/: lab5.tex
lab5/.build/: lab2.blg  lab5.aux  pz.aux  pz.toc
lab5/programm/lab5/: CMakeLists.txt
lab5/programm/lab5/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
lab5/src/: text.tex
